changed button to be more visible, fixed styling, added header photo, unsure?

--- a/src/blocks/header.css
+++ b/src/blocks/header.css
@@ -1,5 +1,6 @@
 .header {
-  background-color: black;
+  background-color: #000;
+  background-image: url('../assets/FALLMOVIE\ NIGHT.svg');
   color: white;
   margin-bottom: auto;
   max-width: 100%;
